--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     background-color: var(--Pale-blue);
     display: grid;
     place-items: center;
-    min height: 100vh;
+    min-height: 100vh;
 }
 
 .container{
@@ -46,7 +46,7 @@ body {
     font-size: 16px;
     text-align: center;
     margin-top: 20px;
-    color: var(--Desaturated-blue); */
+    color: var(--Desaturated-blue);
 }
 
 .article1{
@@ -83,7 +83,7 @@ body {
     padding: 15px;
     text-align: center;
     font-size: 14px;
-    border-radius: 15px;
+    border-radius: 10px;
     font-weight: bold;
 }
 
